Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-163

Integrated designer does not use correct extensions for promoted files

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • Qt Creator 2.1.0
    • Qt Creator 1.2.90
    • Widget Designer
    • None
    • 1b414e00ca5c8ed14429757e27957d4075d41758 (Qt: 00e954ca817f89958a8a8777d93d3843252dc88c )

    Description

      Creator allows the user to specify alternative extensions for common files (eg. .hpp instead of .h). However these are not picked up by the class-promotion editor in the designer which always assumes class header file names are lowercase and end with .h. This causes the build to fail if the user misses the extension applied.

      The integrated designer should use the file extensions specified by the user in Creator's options dialog.

      Fix for Qt 4.8.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            danny77uk Daniel
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes