Qt Designer/Integrations: Add properties for use by C++-IDEs.

...such as the header suffix (like ".h") or whether headers should
be lowercase only. Allows for using different suffixes and
conventions like 'CamelCase.hxx", etc.

Reviewed-by: Jarek Kobus <jaroslaw.kobus@nokia.com>
API-reviewed-by: Kai Koehne <kai.koehne@nokia.com>

Task-number: QTCREATORBUG-163